objects/FF_Batch_details__c.object
<CustomObject>
    <fields>
        <fullName>TechnologyId__c</fullName>
        <label>TechnologyId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dealid__c</fullName>
        <label>dealid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCaseQueued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCaseQueued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isEngageCase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isEngageCase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLineItemQueued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLineItemQueued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLineItem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLineItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isOptyQueued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isOptyQueued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isParentCase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isParentCase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isParentLine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isParentLine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isWokspceTech__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isWokspceTech</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isWorspaceQueued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isWorspaceQueued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jobId__c</fullName>
        <label>jobId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>optyId__c</fullName>
        <label>optyId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FF Batch details</label>
    <nameField>
        <displayFormat>FF-{0000}</displayFormat>
        <label>FF Batch details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FF Batch details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>